--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,19 @@ uuid = "472ee5c9-fceb-493a-8c64-09683b8345c2"
 authors = ["Matt Bhagat-Conway <matt@indicatrix.org> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
+GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
+GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+LibGEOS = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
+LibSpatialIndex = "f19c2e90-9d16-5f2d-a2a7-af3fb29e4907"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
+
 [compat]
 julia = "1.9"
 
