--- a/Project.toml
+++ b/Project.toml
@@ -23,17 +23,19 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Postal = "281d7c9c-f17a-4237-a411-dffb7e66d385"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 SuiteSparseGraphBLAS = "c2e53296-7b14-11e9-1210-bddfa8111e1d"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
+libpostal_jll = "af819820-d0b8-51fd-9b6f-e7926976c73e"
 
 [compat]
 julia = "1.9"
 
 [extras]
+ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
-ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 
 [targets]
 test = ["Test", "ArchGDAL", "TestItemRunner"]
