--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ Artifacts = "1.11.0"
 GDAL = "1.9.0"
 Gadfly = "1.4.0"
 julia = "1.9"
+ArchGDAL = "0.3"
 
 [extras]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
