--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,9 @@ version = "1.0.0-DEV"
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
-Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
-Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 GDAL = "add2ef01-049f-52c4-9ee2-e494f65e021a"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
@@ -25,22 +23,34 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-SuiteSparseGraphBLAS = "c2e53296-7b14-11e9-1210-bddfa8111e1d"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
+# These compat bounds are probably unnecessarily tight, they're just the versions used in
+# development
 [compat]
-Artifacts = "1.11.0"
+ArchGDAL = "0.10.8"
+ArgParse = "1.2.0"
+Compat = "4.16.0"
+DataFrames = "1.7.0"
+EzXML = "1.2.0"
 GDAL = "1.9.0"
 Gadfly = "1.4.0"
+GeoDataFrames = "0.3.10"
+GeoFormatTypes = "0.4.2"
+GeoInterface = "1.3.8"
+Graphs = "1.12.0"
+Humanize = "1.0.0"
+LibGEOS = "0.9.2"
+LibSpatialIndex = "0.2.1"
+MetaGraphsNext = "0.7.1"
+StatsBase = "0.33.21"
+ThreadsX = "0.1.12"
+
+# built in libraries
+Mmap = "1.9"
+Logging = "1.9"
+LinearAlgebra = "1.9"
+Artifacts = "1.9"
 julia = "1.9"
-GeoDataFrames = "0.3"
 
-[extras]
-ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
-
-[targets]
-test = ["Test", "ArchGDAL", "TestItemRunner"]
