--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -6,3 +7,13 @@ LibSpatialIndex = "f19c2e90-9d16-5f2d-a2a7-af3fb29e4907"
 StructEquality = "6ec83bb0-ed9f-11e9-3b4c-2b04cb4e219c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+
+[compat]
+Aqua = "0.8"
+ArchGDAL = "0.10.8"
+DataFrames = "1.7.0"
+Graphs = "1.12.0"
+LibSpatialIndex = "0.2.1"
+StructEquality = "2.1.0"
+TestItemRunner = "1.1.0"
+Test = "1.9"
