--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,8 @@ CSV = "0.10.15"
 Cairo = "1.1.1"
 Compat = "4.16.0"
 DataFrames = "1.7.0"
-Dates = "1.11.0"
+DataStructures = "0.18.22"
+Dates = "1.9.0"
 EzXML = "1.2.0"
 Fontconfig = "0.4.1"
 GDAL = "1.9.0"
