--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MissingLinks"
 uuid = "472ee5c9-fceb-493a-8c64-09683b8345c2"
 authors = ["Matt Bhagat-Conway <matt@indicatrix.org> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
