--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
+OpenStreetMapPBF = "32359c53-f983-4442-b913-a1664815e12e"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
@@ -56,6 +57,7 @@ LinearAlgebra = "1.9"
 Logging = "1.9"
 MetaGraphsNext = "0.7.1"
 Mmap = "1.9"
+OpenStreetMapPBF = "0.2.0"
 StatsBase = "0.33.21"
 ThreadsX = "0.1.12"
 julia = "1.9"
