--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Artifacts = "56f22d72-fd6d-98f1-02f0-08ddc0907c33"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
+DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -29,6 +30,7 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 OpenStreetMapPBF = "32359c53-f983-4442-b913-a1664815e12e"
+SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
@@ -39,6 +41,7 @@ Artifacts = "1.9"
 CSV = "0.10.15"
 Cairo = "1.1.1"
 Compat = "4.16.0"
+DBInterface = "2.6.1"
 DataFrames = "1.7.0"
 DataStructures = "0.18.22"
 Dates = "1.9.0"
@@ -58,6 +61,7 @@ Logging = "1.9"
 MetaGraphsNext = "0.7.1"
 Mmap = "1.9"
 OpenStreetMapPBF = "0.2.0"
+SQLite = "1.6.1"
 StatsBase = "0.33.21"
 ThreadsX = "0.1.12"
 julia = "1.9"
