--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MissingLinks"
 uuid = "472ee5c9-fceb-493a-8c64-09683b8345c2"
-authors = ["Matt Bhagat-Conway <matt@indicatrix.org> and contributors"]
 version = "0.1.0"
+authors = ["Matt Bhagat-Conway <matt@indicatrix.org> and contributors"]
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
@@ -12,6 +12,7 @@ Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
@@ -43,6 +44,7 @@ Cairo = "1.1.1"
 Compat = "4.16.0"
 DBInterface = "2.6.1"
 DataFrames = "1.7.0"
+DataFramesMeta = "0.15.5"
 DataStructures = "0.18.22"
 Dates = "1.9.0"
 EzXML = "1.2.0"
@@ -50,12 +52,12 @@ Fontconfig = "0.4.1"
 GDAL = "1.9.0"
 Gadfly = "1.4.0"
 GeoDataFrames = "0.3.10"
-GeoFormatTypes = "0.4.2"
+GeoFormatTypes = "0.4.4"
 GeoInterface = "1.3.8"
 Graphs = "1.12.0"
 Humanize = "1.0.0"
 LibGEOS = "0.9.2"
-LibSpatialIndex = "0.2.1"
+LibSpatialIndex = "0.2"
 LinearAlgebra = "1.9"
 Logging = "1.9"
 MetaGraphsNext = "0.7.1"
