--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MissingLinks"
 uuid = "472ee5c9-fceb-493a-8c64-09683b8345c2"
-authors = ["Matt Bhagat-Conway <matt@indicatrix.org> and contributors"]
 version = "0.1.0"
+authors = ["Matt Bhagat-Conway <matt@indicatrix.org> and contributors"]
 
 [deps]
 ArchGDAL = "c9ce4bd3-c3d5-55b8-8973-c0e20141b8c3"
@@ -11,8 +11,10 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DimensionalData = "0703355e-b756-11e9-17c0-8b28908087d0"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 Fontconfig = "186bb1d3-e1f7-5a2c-a377-96d770f13627"
 GDAL = "add2ef01-049f-52c4-9ee2-e494f65e021a"
@@ -29,6 +31,9 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 OpenStreetMapPBF = "32359c53-f983-4442-b913-a1664815e12e"
+OverflowContexts = "649716ba-0eb1-4560-ace2-251185f55281"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
@@ -40,8 +45,10 @@ CSV = "0.10.15"
 Cairo = "1.1.1"
 Compat = "4.16.0"
 DataFrames = "1.7.0"
+DataFramesMeta = "0.15.6"
 DataStructures = "0.18.22"
 Dates = "1.9.0"
+DimensionalData = "0.29.18"
 EzXML = "1.2.0"
 Fontconfig = "0.4.1"
 GDAL = "1.9.0"
@@ -58,6 +65,9 @@ Logging = "1.9"
 MetaGraphsNext = "0.7.1"
 Mmap = "1.9"
 OpenStreetMapPBF = "0.2.0"
-StatsBase = "0.33.21"
+OverflowContexts = "0.2.7"
+ProgressMeter = "1.11.0"
+Rasters = "0.14.0"
+StatsBase = "0.34.0"
 ThreadsX = "0.1.12"
 julia = "1.9"
