--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,6 +1,8 @@
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 GeoDataFrames = "62cb38b5-d8d2-4862-a48e-6a340996859f"
+GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 MissingLinks = "472ee5c9-fceb-493a-8c64-09683b8345c2"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
