--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-# don't really need to check older Julia, we control where this package runs
-#            - 1.6
-            - 1
+          - '1.10'
         os:
           - ubuntu-latest
         arch:
@@ -31,6 +29,10 @@ jobs:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
       - uses: julia-actions/cache@v1
+      - uses: julia-actions/julia-downgrade-compat@v2
+        with:
+          mode: deps
+          skip: Logging, Mmap, LinearAlgebra, Dates
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
