initial work on automated tests for partitioning

--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 OpenStreetMapPBF = "32359c53-f983-4442-b913-a1664815e12e"
 OverflowContexts = "649716ba-0eb1-4560-ace2-251185f55281"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Rasters = "a3a2b9e3-a471-40c9-b274-f788e487c689"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -66,6 +67,7 @@ MetaGraphsNext = "0.7.1"
 Mmap = "1.10"
 OpenStreetMapPBF = "0.2.0"
 OverflowContexts = "0.2.7"
+Pkg = "1.10"
 ProgressMeter = "1.11.0"
 Rasters = "0.14.0"
 StatsBase = "0.34.0"
