more updates for correction

--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ LibGEOS = "a90b1aa1-3769-5649-ba7e-abc5a9d163eb"
 LibSpatialIndex = "f19c2e90-9d16-5f2d-a2a7-af3fb29e4907"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 MetaGraphsNext = "fa8bd995-216d-47f1-8a91-f3b68fbeb377"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 OpenStreetMapPBF = "32359c53-f983-4442-b913-a1664815e12e"
@@ -63,6 +64,7 @@ LibGEOS = "0.9.2"
 LibSpatialIndex = "0.2.2"
 LinearAlgebra = "1.10"
 Logging = "1.9"
+Measures = "0.3.3"
 MetaGraphsNext = "0.7.1"
 Mmap = "1.10"
 OpenStreetMapPBF = "0.2.0"
